23_power_rec/grade.txt
Grading at Wed Oct  9 02:55:30 UTC 2019
Attempting to compile power.c
power.c: In function ‘power’:
power.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
